--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 
                     <!-- Total Keluar -->
                     <div class="balance-item border-r border-gray-200 px-2">
-                        <p class="text-[var(--color-pengeluaran)]"><i class="fas fa-arrow-up-long mr-1"> K E L U R</i></p>
+                        <p class="text-[var(--color-pengeluaran)]"><i class="fas fa-arrow-up-long mr-1"> K E L U A R</i></p>
                         <p id="totalPengeluaran" class="balance-value">0</p>
                     </div>
                     
